Do some basic jit block invalidation

--- a/meson.build
+++ b/meson.build
@@ -15,6 +15,10 @@ if get_option('no_crlf')
     add_project_arguments('-DNO_CRLF', language: 'c')
 endif
 
+if get_option('jit')
+    add_project_arguments('-DJIT=1', language: 'c')
+endif
+
 add_project_arguments('-Wno-switch', language: 'c')
 
 includes = [include_directories('.')]
