--- a/meson.build
+++ b/meson.build
@@ -57,6 +57,7 @@ src = [
     'kernel/getset.c',
     'kernel/signal.c',
     'kernel/resource.c',
+    'kernel/random.c',
 
     'kernel/fs.c',
     'kernel/fs_info.c',
