Log into a circular buffer

--- a/meson.build
+++ b/meson.build
@@ -45,6 +45,7 @@ src = [
     'kernel/vdso.c', vdso,
     'kernel/task.c',
     'kernel/group.c',
+    'kernel/log.c',
 
     'kernel/fork.c',
     'kernel/exec.c',
