--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
-language: c
-compiler: clang
-install:
-    - source ~/virtualenv/python3.6/bin/activate
-    - pip install meson
-# ok now I have to get a newer version of ninja than 1.3.1 which is the latest
-# you can get from trusty *sigh*
-    - curl -LO https://github.com/ninja-build/ninja/releases/download/v1.8.2/ninja-linux.zip
-    - unzip ninja-linux.zip ninja -d ~/bin
+os: osx
+language: objective-c
 
 env:
     - MESON_OPTS=-Djit=true
     - MESON_OPTS=-Djit=false
 
 script:
-    - meson build $MESON_OPTS
-    - ninja -C build
+    # this is so satanic i can't even begin to explain it
+    # - brew update
+    - brew install llvm yarn
+    - export PATH=/usr/local/bin:/usr/local/sbin:/usr/local/opt/llvm/bin:$PATH
+    - pip3 install meson
+    - curl -LO https://github.com/ninja-build/ninja/releases/download/v1.8.2/ninja-mac.zip
+    - unzip ninja-mac.zip ninja -d ~/bin
+    - xcodebuild -project iSH.xcodeproj -alltargets -sdk iphoneos CODE_SIGNING_ALLOWED=NO
