--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,32 @@
-language: c
-compiler: clang
-install:
-    - source ~/virtualenv/python3.6/bin/activate
-    - pip install meson
-# ok now I have to get a newer version of ninja than 1.3.1 which is the latest
-# you can get from trusty *sigh*
-    - curl -LO https://github.com/ninja-build/ninja/releases/download/v1.8.2/ninja-linux.zip
-    - unzip ninja-linux.zip ninja -d ~/bin
+matrix:
+  include:
+    - language: c
+      os: linux
+      compiler: clang
+      install:
+          - source ~/virtualenv/python3.6/bin/activate
+          - pip install meson
+      # ok now I have to get a newer version of ninja than 1.3.1 which is the latest
+      # you can get from trusty *sigh*
+          - curl -LO https://github.com/ninja-build/ninja/releases/download/v1.8.2/ninja-linux.zip
+          - unzip ninja-linux.zip ninja -d ~/bin
+      env:
+          - MESON_OPTS=-Djit=true
+          - MESON_OPTS=-Djit=false
+      script:
+          - meson build $MESON_OPTS
+          - ninja -C build
 
-env:
-    - MESON_OPTS=-Djit=true
-    - MESON_OPTS=-Djit=false
+    - language: objective-c
+      osx_image: xcode10.1
+      install:
+        - pip3 install meson
+      addons:
+        homebrew:
+          packages:
+          - ninja
+          - llvm
+          - yarn
+      script:
+        - xcodebuild -project iSH.xcodeproj -scheme iSH -sdk iphoneos CODE_SIGNING_ALLOWED=NO
 
-script:
-    - meson build $MESON_OPTS
-    - ninja -C build
