--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,25 @@
-env:
-    - MESON_OPTS=-Djit=true
-    - MESON_OPTS=-Djit=false
+macros:
+    - &linux
+      language: c
+      os: linux
+      compiler: clang
+      install:
+          - source ~/virtualenv/python3.6/bin/activate
+          - pip install meson
+            # ok now I have to get a newer version of ninja than 1.3.1 which is the latest
+            # you can get from trusty *sigh*
+          - curl -LO https://github.com/ninja-build/ninja/releases/download/v1.8.2/ninja-linux.zip
+          - unzip ninja-linux.zip ninja -d ~/bin
+      script:
+          - meson build $MESON_OPTS
+          - ninja -C build
+
 matrix:
     include:
-        - language: c
-          os: linux
-          compiler: clang
-          install:
-              - source ~/virtualenv/python3.6/bin/activate
-              - pip install meson
-                # ok now I have to get a newer version of ninja than 1.3.1 which is the latest
-                # you can get from trusty *sigh*
-              - curl -LO https://github.com/ninja-build/ninja/releases/download/v1.8.2/ninja-linux.zip
-              - unzip ninja-linux.zip ninja -d ~/bin
-          script:
-              - meson build $MESON_OPTS
-              - ninja -C build
-
+        - <<: *linux
+          env: MESON_OPTS=-Djit=true
+        - <<: *linux
+          env: MESON_OPTS=-Djit=false
         - language: objective-c
           osx_image: xcode10.1
           install:
