--- a/meson.build
+++ b/meson.build
@@ -28,7 +28,7 @@ cc = meson.get_compiler('c')
 threads = dependency('threads')
 librt = cc.find_library('rt', required: false)
 libm = cc.find_library('m', required: false)
-security_framework = dependency('appleframeworks', modules : 'Security', required: false)
+security_framework = dependency('appleframeworks', modules: 'Security', required: false)
 
 subdir('vdso') # ish depends on the vdso
 
@@ -116,11 +116,16 @@ endif
 
 sqlite3 = cc.find_library('sqlite3')
 
+dependencies = [librt, libm, threads, sqlite3]
+if host_machine.system() == 'darwin'
+    dependencies += security_framework
+endif
+
 libish = library('ish', src,
     include_directories: includes)
 ish = declare_dependency(
     link_with: libish,
-    dependencies: [librt, libm, threads, sqlite3, security_framework],
+    dependencies: dependencies,
     include_directories: includes)
 
 # ptraceomatic et al
