Add index for finding a path from an inode

--- a/meson.build
+++ b/meson.build
@@ -71,6 +71,7 @@ src = [
     'fs/real.c',
     'fs/fake.c',
     'fs/fake-rebuild.c',
+    'fs/fake-migrate.c',
 
     'fs/adhoc.c',
     'fs/sock.c',
