Implement procfs with just /proc/version

--- a/meson.build
+++ b/meson.build
@@ -73,6 +73,7 @@ src = [
     'fs/fake.c',
     'fs/fake-rebuild.c',
     'fs/fake-migrate.c',
+    'fs/proc.c',
 
     'fs/adhoc.c',
     'fs/sock.c',
