Don't skip rounding for shifts of size 64 (fixes #258)

--- a/meson.build
+++ b/meson.build
@@ -152,6 +152,6 @@ endforeach
 
 if not meson.is_cross_build()
     # test for floating point library
-    float80_test = executable('float80_test', ['emu/float80.c', 'emu/float80-test.c'])
+    float80_test = executable('float80_test', ['emu/float80.c', 'emu/float80-test.c'], dependencies: [libm])
     test('float80', float80_test)
 endif
