--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
         - language: objective-c
           osx_image: xcode10.1
           install:
-              - pip3 install meson
+              - pip3 install meson==0.49.2
           addons:
               homebrew:
                   packages:
