Make it easy to change the bundle ID

--- a/app/FileProvider/Info.plist
+++ b/app/FileProvider/Info.plist
@@ -23,7 +23,7 @@
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionFileProviderDocumentGroup</key>
-		<string>group.app.ish.iSH</string>
+		<string>$(PRODUCT_APP_GROUP_IDENTIFIER)</string>
 		<key>NSExtensionFileProviderSupportsEnumeration</key>
 		<true/>
 		<key>NSExtensionPointIdentifier</key>
