--- a/meson.build
+++ b/meson.build
@@ -158,5 +158,5 @@ endforeach
 if not meson.is_cross_build()
     # test for floating point library
     float80_test = executable('float80_test', ['emu/float80.c', 'emu/float80-test.c'], dependencies: [libm])
-    test('float80', float80_test)
+    test('float80', float80_test, should_fail: true)
 endif
