Add dynamic devices

--- a/meson.build
+++ b/meson.build
@@ -81,6 +81,8 @@ src = [
     'fs/proc/root.c',
     'fs/proc/pid.c',
 
+    'fs/dyndev.c',
+
     'fs/adhoc.c',
     'fs/sock.c',
     'fs/pipe.c',
