--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libapps"]
 	path = app/terminal/libapps
-	url = https://chromium.googlesource.com/apps/libapps
+	url = https://github.com/ish-app/libapps
