--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,19 @@ macros:
       script:
           - meson build $MESON_OPTS
           - ninja -C build $NINJA_TARGET
+    - &mac
+      language: objective-c
+      install:
+          - pip3 install meson==0.49.2
+      addons:
+          homebrew:
+              packages:
+                  - ninja
+                  - llvm
+                  - yarn
+              update: true
+      script:
+          - xcodebuild -project iSH.xcodeproj -scheme iSH -sdk iphoneos CODE_SIGNING_ALLOWED=NO
 
 matrix:
     include:
@@ -25,19 +38,10 @@ matrix:
           env:
               - MESON_OPTS=-Djit=false
               - NINJA_TARGET=
-        - language: objective-c
+        - <<: *mac
           osx_image: xcode10.1
-          install:
-              - pip3 install meson==0.49.2
-          addons:
-              homebrew:
-                  packages:
-                      - ninja
-                      - llvm
-                      - yarn
-                  update: true
-          script:
-              - xcodebuild -project iSH.xcodeproj -scheme iSH -sdk iphoneos CODE_SIGNING_ALLOWED=NO
+        - <<: *mac
+          osx_image: xcode11
     exclude:
         - language: objective-c
           env: MESON_OPTS=-Djit=false
