Migrate `-Djit=true` option to `-Dengine=jit`.
This has the side effect of making it impossible to
compile in what was `-Djit=false`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
     include:
         - <<: *linux
           env:
-              - MESON_OPTS=-Djit=true
+              - MESON_OPTS=-Dengine=jit
               - NINJA_TARGET=test
         - language: objective-c
           osx_image: xcode11
