--- a/meson_options.txt
+++ b/meson_options.txt
@@ -2,7 +2,7 @@ option('log', type: 'string', value: '')
 option('nolog', type: 'string', value: '')
 option('log_handler', type: 'string', value: 'dprintf')
 
-option('engine', type: 'combo', choices: ['jit'], value: 'jit')
+option('engine', type: 'combo', choices: ['jit', 'interp'], value: 'jit')
 
 option('vdso_c_args', type: 'string', value: '')
 
