Add location tracking device
Supports tracking your location in the background, which has the nice
side effect of keeping everything in app running in the background.

#249

--- a/app/Info.plist
+++ b/app/Info.plist
@@ -20,12 +20,16 @@
 	<string>60</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
-	<key>UIFileSharingEnabled</key>
-	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -46,5 +50,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>A program running in iSH wants to track your location in the background.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>A program running in iSH wants to track your location.</string>
 </dict>
 </plist>
