Update Travis to Ubuntu 18.04
A new version of Meson was released that requires a newer version of
Ninja which is not available in 16.04.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ macros:
     - &linux
       language: c
       os: linux
-      dist: xenial
+      dist: bionic
       compiler: clang
       addons:
           apt:
