Implement the MMX instructions needed by Go
It turns out that go only needs one MMX instruction: movq, which it uses
for 64-bit atomic loads and stores. This wasn't too hard.

For #57

--- a/meson.build
+++ b/meson.build
@@ -104,7 +104,7 @@ src = [
     'emu/memory.c',
     'emu/tlb.c',
     'emu/fpu.c',
-    'emu/sse.c',
+    'emu/vec.c',
     'emu/float80.c',
 
     'platform/' + host_machine.system() + '.c',
