--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,28 @@
-compiler:
-    - gcc
-    - clang
+macros:
+    - &linux
+      language: c
+      os: linux
+      dist: bionic
+      addons:
+          apt:
+              packages:
+                  - ninja-build
+      install:
+          - source ~/virtualenv/python3.6/bin/activate
+          - pip install meson
+      script:
+          - meson build $MESON_OPTS
+          - ninja -C build $NINJA_TARGET
+      env:
+          - MESON_OPTS=-Dengine=jit
+          - NINJA_TARGET=test
 
-jobs:
+matrix:
     include:
-        - language: c
-          os: linux
-          dist: bionic
-          addons:
-              apt:
-                  packages:
-                      - ninja-build
-          install:
-              - source ~/virtualenv/python3.6/bin/activate
-              - pip install meson
-          script:
-              - meson build $MESON_OPTS
-              - ninja -C build $NINJA_TARGET
-          env:
-              - MESON_OPTS=-Dengine=jit
-              - NINJA_TARGET=test
-
+        - <<: *linux
+          compiler: gcc
+        - <<: *linux
+          compiler: clang
         - language: objective-c
           os: osx
           osx_image: xcode11
@@ -34,4 +36,3 @@ jobs:
                   update: true
           script:
               - xcodebuild -project iSH.xcodeproj -scheme iSH -sdk iphoneos CODE_SIGNING_ALLOWED=NO
-
