--- a/tools/meson.build
+++ b/tools/meson.build
@@ -13,8 +13,13 @@ if host_machine.system() == 'linux' and host_machine.cpu() == 'x86_64'
         include_directories: includes)
 endif
 
-unicorn = meson.get_compiler('c').find_library('unicorn', required: false)
+unicorn = cc.find_library('unicorn', required: false)
 if unicorn.found()
     executable('unicornomatic', ['unicornomatic.c', 'undefined-flags.c'], dependencies: [ish, unicorn])
     configure_file(input: 'ptraceomatic-gdb.gdb', output: 'unicornomatic-gdb.gdb', copy: true)
+endif
+
+libarchive = cc.find_library('libarchive', required: false)
+if libarchive.found()
+    executable('fakefsify', 'fakefsify.c', dependencies: [ish, libarchive])
 endif
