Add filesystem management
#695

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libapps"]
 	path = deps/libapps
 	url = https://github.com/ish-app/libapps
+[submodule "deps/libarchive"]
+	path = deps/libarchive
+	url = https://github.com/libarchive/libarchive
